# ChangeLog for x11-drivers/xf86-input-vmmouse
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-vmmouse/ChangeLog,v 1.31 2010/01/23 19:57:05 scarabeus Exp $

  23 Jan 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -xf86-input-vmmouse-12.4.1.ebuild, -xf86-input-vmmouse-12.4.3.ebuild,
  -xf86-input-vmmouse-12.5.0.ebuild, -xf86-input-vmmouse-12.6.3.ebuild,
  -xf86-input-vmmouse-12.6.4.ebuild:
  rm

  05 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
  xf86-input-vmmouse-12.6.5.ebuild:
  x86 stable, bug 282290

  30 Sep 2009; Samuli Suominen <ssuominen@gentoo.org>
  xf86-input-vmmouse-12.6.5.ebuild:
  amd64 stable wrt #282290

*xf86-input-vmmouse-12.6.5 (06 Aug 2009)

  06 Aug 2009; Rémi Cardona <remi@gentoo.org>
  +xf86-input-vmmouse-12.6.5.ebuild:
  bump to 12.6.5

*xf86-input-vmmouse-12.6.4 (03 Aug 2009)

  03 Aug 2009; Rémi Cardona <remi@gentoo.org>
  +xf86-input-vmmouse-12.6.4.ebuild:
  bump to 12.6.4

  05 Apr 2009; Markus Meier <maekke@gentoo.org>
  xf86-input-vmmouse-12.6.3.ebuild:
  x86 stable, bug #251832

  05 Apr 2009; Olivier Crête <tester@gentoo.org>
  xf86-input-vmmouse-12.6.3.ebuild:
  Stable on amd64, bug #251832

*xf86-input-vmmouse-12.6.3 (13 Jan 2009)

  13 Jan 2009; Donnie Berkholz <dberkholz@gentoo.org>;
  +xf86-input-vmmouse-12.6.3.ebuild:
  Bump. Adds HAL integration for hotplugging, assorted bugfixes.

*xf86-input-vmmouse-12.5.0 (24 Mar 2008)

  24 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  +xf86-input-vmmouse-12.5.0.ebuild:
  Bump.

  24 Feb 2008; Donnie Berkholz <dberkholz@gentoo.org>; ChangeLog:
  Update my email.

  31 Jan 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  -xf86-input-vmmouse-12.4.0.ebuild, -xf86-input-vmmouse-12.4.2.ebuild:
  Clean up.

  10 Dec 2007; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
  dev-zero is the new maintainer.

*xf86-input-vmmouse-12.4.3 (07 Nov 2007)

  07 Nov 2007; Donnie Berkholz <dberkholz@gentoo.org>;