@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST xf86-input-vmmouse-12.6.5.tar.bz2 260212 RMD160 6924a9c0522a378cdc0d2280cc756ab08bb4e3db SHA1 bf2f1031ccc0096f388272ce93b75572d24548be SHA256 381ac3b9dc47f7bb425b4748fc9945e9c70054e40d71aedcd5327b5834d68c0d
+DIST xf86-input-vmmouse-12.6.6.tar.bz2 272965 RMD160 5621998cfb616cdb62372c9090e1830be143aaa6 SHA1 b6e04f93d7d2a888ab118858b2b6a4f4dd947be6 SHA256 0cb2896b7a284efd6337c019c599fd4d5a6de74a58c6e6c31c31ed399efa8171
 EBUILD xf86-input-vmmouse-12.6.5.ebuild 529 RMD160 c05a501b93d47c5b26a4b0311eb57bfa11a05711 SHA1 fe5dd7ad2710e39209796217478d1922758d2a8a SHA256 cdfb2b943d1076fe27665c2cd5aa6ac06ee043be519c1fa7fd5b9ae2d5ba550e
-MISC ChangeLog 5122 RMD160 77b681784405d29d56cca404e75868d7bc1f55e3 SHA1 42b778007601bd0c8810fd8074770a6040cdd337 SHA256 9416ba955cc3ab1b4acb20b651ae94e159ee21d27be68e7b7f558e544336425d
+EBUILD xf86-input-vmmouse-12.6.6.ebuild 535 RMD160 4732d9d7a2e2dba7b72de406011bcd7c4b202096 SHA1 0d2444af08c815efcc621c0d2fbb8bd2e54e7302 SHA256 2b72deed71dfac1e530b7ff9c2f6fa5de479c248fcd3d32c8de28a7b25347881
+MISC ChangeLog 5273 RMD160 c824ff2e04ae9b94b8ef7833e19335cd3ede0f95 SHA1 2cbefa71aaa2643e799da59114e50a967d498657 SHA256 24a31bc3cca78b9c0fe997fef343f598635663a08bc92d6663ca6ec9e5174645
 MISC metadata.xml 254 RMD160 c918c791107bb6bade5533be97fda2a5357ade13 SHA1 c0bf2ca0f6107fdce02502942d7050d84ad30fb2 SHA256 32d68d1ad2e14d3f3af865dce8b2e42fec8722f17b1b35beeb5ecbd9b8e1a253
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iEYEARECAAYFAkt6egsACgkQHB6c3gNBRYcIYwCggIlfPe8DCpVueAM1Bw7mqYqv
+PPIAn2f88t8mxqusN1NsOEGo5VYw/YwG
+=mcCK
+-----END PGP SIGNATURE-----
