@@ -1,0 +1,16 @@
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-vmmouse/xf86-input-vmmouse-12.6.6.ebuild,v 1.1 2010/02/16 10:57:33 scarabeus Exp $
+
+# Must be before x-modular eclass is inherited
+#SNAPSHOT="yes"
+
+inherit x-modular
+
+DESCRIPTION="VMWare mouse input driver"
+KEYWORDS="~amd64 ~x86 ~x86-fbsd"
+RDEPEND=">=x11-base/xorg-server-0.99.3"
+DEPEND="${RDEPEND}
+	>=x11-proto/inputproto-1.4.1
+	x11-proto/randrproto
+	x11-proto/xproto"
