@@ -1,6 +1,12 @@
 # ChangeLog for x11-drivers/xf86-input-vmmouse
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-vmmouse/ChangeLog,v 1.31 2010/01/23 19:57:05 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-vmmouse/ChangeLog,v 1.32 2010/02/16 10:57:33 scarabeus Exp $
+
+*xf86-input-vmmouse-12.6.6 (16 Feb 2010)
+
+  16 Feb 2010; Tomáš Chvátal <scarabeus@gentoo.org>
+  +xf86-input-vmmouse-12.6.6.ebuild:
+  Version bump.
 
   23 Jan 2010; Tomáš Chvátal <scarabeus@gentoo.org>
   -xf86-input-vmmouse-12.4.1.ebuild, -xf86-input-vmmouse-12.4.3.ebuild,
